# soundclash

./: .gitignore  CODEOWNERS  LICENSE  pyproject.toml
.github/workflows/: notion-sync.yml
notebooks/: README.md
notebooks/preliminary/: soundclash_analysis1.ipynb
src/soundclash/preprocessing/: __init__.py  base.py  data_manager.py
tests/preprocessing/: test_base.py
